--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -9,6 +9,9 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<link rel="shortcut icon" href="/assets/favicon.ico" />
+<link rel="icon" href="assets/favicon.ico" />
+
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
